lezione css form

--- a/settimana_1/l4_26_10_2023/lezioni/form.css
+++ b/settimana_1/l4_26_10_2023/lezioni/form.css
@@ -18,3 +18,27 @@ input[type=radio]:checked {
     margin-left: 50px;
 
 }
+
+input[type=number]:in-range {
+    background-color: green;
+
+}
+
+input[type=number]:out-of-range {
+    background-color: red;
+
+}
+
+input:required {
+    border-color: red;
+}
+
+input[type=email]:valid {
+    background-color: green;
+
+}
+
+input[type=email]:invalid {
+    background-color: red;
+
+}
