--- a/settimana_1/l4_26_10_2023/esercizi/assets/css/style.css
+++ b/settimana_1/l4_26_10_2023/esercizi/assets/css/style.css
@@ -29,7 +29,7 @@ p {
 
 
 /* HEADER */
-header{
+header {
     text-align: center;
     background: linear-gradient(180deg, rgba(11, 76, 111, 1) 0%, rgba(9, 81, 121, 1) 39%, rgba(0, 212, 255, 1) 100%);
     font-weight: bold;
@@ -106,11 +106,13 @@ h4 {
     text-align: center;
     margin: 5px;
 }
-video{
+
+video {
     display: block;
     margin: 20px auto;
     border-radius: 10px;
 }
+
 .news {
     width: 90%;
     margin: 0 auto;
@@ -124,14 +126,18 @@ table {
     text-align: center;
     border: 1px solid white;
 }
-thead,tfoot {
+
+thead,
+tfoot {
     background-color: lightblue;
     color: white;
 }
+
 td {
     padding: 20px;
 }
-tfoot td{
+
+tfoot td {
     padding: 1px;
 }
 
@@ -144,20 +150,22 @@ tr:nth-child(even) {
 form {
     padding: 20px;
 }
-input[type=email]{
+
+input[type=email] {
     border: 0;
     border-bottom: 1px dashed black;
-    
+
 }
-input[type=submit]{
+
+input[type=submit] {
     border: 0;
     background-color: blue;
     color: white;
-    
+
 }
 
 /* ELEMENTI NELL' ASIDE */
-article{
+article {
     width: 90%;
     margin: 20px auto;
     background-color: lightgray;
@@ -165,24 +173,28 @@ article{
     border: 1px solid gray;
 
 }
-h3{
+
+h3 {
     padding-top: 10px;
     text-align: center;
     font-weight: bold;
     font-size: 20px;
 }
-.data_post
-{
+
+.data_post {
     text-align: right;
 }
-aside{
+
+aside {
     padding-bottom: 30px;
 }
-aside a{
+
+aside a {
     color: darkcyan;
     font-weight: bold;
 }
-aside p{
+
+aside p {
     padding: 10px 20px;
 }
 
@@ -195,15 +207,20 @@ footer {
     color: white;
 
 }
-address{
+
+address {
     font-weight: bold;
 }
-footer h5{
+
+footer h5 {
     padding: 10px;
 
 }
-footer p{
-    padding: 10px;}
-footer a{
+
+footer p {
+    padding: 10px;
+}
+
+footer a {
     color: purple;
-    }
+}
