fix_responsive_banner

--- a/test_settimanali_venerdi/s1_27_10_2023/css/style_desktop.css
+++ b/test_settimanali_venerdi/s1_27_10_2023/css/style_desktop.css
@@ -67,7 +67,7 @@ main img {
     background-size: cover;
 }
 #banner div {
-    width: 50%;
+    max-width: 745px;
     padding: 50px;
     margin: 0 auto;
 }
