Test settimanale fix 03/11/2023

--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
@@ -95,8 +95,10 @@ body {
     padding: 0 2rem;
 }
 
-.inline_block {
-    display: inline-block;
+.flex {
+
+    display: flex;
+    justify-content: space-around;
 }
 
 a {
