--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
@@ -1,4 +1,4 @@
-/* ikea's Bootstrap */
+/*---------GLOBAL---------*/
 * {
     box-sizing: border-box;
 }
@@ -7,7 +7,16 @@ body {
     background-color: #E9EDEE;
     font-family: Arial, Helvetica, sans-serif;
 }
+a {
+    text-decoration: none;
+}
 
+span a {
+    font-weight: bold;
+    color: #145F6D;
+}
+
+/* ikea's Bootstrap */
 .fs-20 {
     font-size: 1.2rem;
 }
@@ -101,14 +110,7 @@ body {
     justify-content: space-around;
 }
 
-a {
-    text-decoration: none;
-}
 
-span a {
-    font-weight: bold;
-    color: #145F6D;
-}
 
 /*----------HEADER------------*/
 .header-logo {
@@ -128,7 +130,7 @@ ul {
 ul li {
     list-style-type: none;
     float: left;
-    padding: 0rem 1rem;
+
 
 }
 
