--- a/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
+++ b/test_settimanali_venerdi/s2_03_11_2023/amazon_page/assets/css/style.css
@@ -7,6 +7,7 @@ body {
     background-color: #E9EDEE;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 a {
     text-decoration: none;
 }
@@ -61,10 +62,13 @@ span a {
     text-align: left;
 }
 
-.min-w {
+.main-format {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-bottom: 3rem;
     min-width: 1500px;
-}
 
+}
 
 .mb-3 {
 
