final version corretta in gruppo

--- a/corso/settimana_3_javascript2/l11_08_11_2023/esercizi/asset/css/index.css
+++ b/corso/settimana_3_javascript2/l11_08_11_2023/esercizi/asset/css/index.css
@@ -16,11 +16,11 @@ body {
 p {
     display: inline;
 }
-div {
+div.container {
     border-radius: 20px;
     background-color: lightslategray;
 }
-div.task {
+div.tasks {
     background-color: lightgreen;
     margin: 5px;
 }
