fix line height

--- a/corso/settimana_4_css_avanzato/l13_20_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l13_20_11_2023/esercizi/assets/css/style.css
@@ -269,11 +269,11 @@ footer a {
   }
   section {
     border-radius: 20px;
-    line-height: 40px;
+    line-height: 35px;
   }
   input {
     height: 52px;
-    width: 380px;
+    width: 65%;
   }
   input[placeholder] {
     padding-left: 20px;
