fix negative margin

--- a/corso/settimana_4_css_avanzato/l13_20_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l13_20_11_2023/esercizi/assets/css/style.css
@@ -284,6 +284,10 @@ footer a {
   }
   aside div {
     display: inline-block;
-    width: 33%;
+    width: 33.3%;
+    margin: 0 -4px;
+  }
+  aside div p {
+    height: 60px;
   }
 }
