--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
@@ -1,15 +1,21 @@
+* {
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
   font-weight: 400;
   color: #732104;
+}
+header,
+main {
   padding: 1rem;
 }
-
-.header-wrapper {
+nav {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
   padding: 1rem;
   background-color: #fef7e2;
@@ -17,15 +23,10 @@ body {
   min-width: 360px;
   margin-block-end: 50px;
   font-weight: 600;
+  gap: 10px;
 }
-.button-wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0.5rem;
-  width: 100%;
-}
-header .button-wrapper > div {
+
+nav div {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +36,7 @@ header .button-wrapper > div {
   border-radius: 80px;
   min-width: 110px;
 }
-header div.header-shop-button {
+nav .header-shop-button {
   font-size: 2rem;
   padding: 2rem 3rem;
   min-width: 230px;
@@ -121,21 +122,123 @@ span {
   width: 100%;
 }
 @media screen and (min-width: 575px) {
-  .header-wrapper {
-    flex-direction: row;
-    justify-content: center;
-    gap: unset;
+  body {
+    font-size: 1rem;
   }
-  .button-wrapper {
+  header {
     padding: 0rem;
   }
-  .button-wrapper:nth-of-type(2) {
+  nav {
+    flex-wrap: nowrap;
+    padding: 1rem 0.5rem;
+    gap: 5px;
+    border-radius: 0px;
+    min-width: unset;
+  }
+  nav div:nth-of-type(2) {
+    order: -2;
+  }
+  nav div:nth-of-type(3) {
     order: -1;
   }
-  header .button-wrapper > div {
-    padding-block: 1.25rem;
+  nav div {
+    padding-block: 1rem;
     padding-inline: 0.5rem;
     min-width: unset;
+    min-width: none;
     flex-shrink: 0;
+  }
+  nav .header-shop-button {
+    font-size: 2rem;
+    padding: 1.5rem 1rem;
+    min-width: unset;
+  }
+  main {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    min-width: 360px;
+  }
+  .titolo {
+    width: 100%;
+  }
+  h1 {
+    text-align: left;
+    font-size: 2.5rem;
+    font-weight: 900;
+  }
+  h2 {
+    margin-block-start: 30px;
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 900;
+  }
+  .card {
+    max-width: 40%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    background-color: #fef7e2;
+  }
+}
+
+@media screen and (min-width: 766px) {
+  body {
+    overflow: auto;
+    display: flex;
+  }
+  nav {
+    height: 100vh;
+    width: 200px;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: start;
+    gap: 30px;
+    padding: 1rem 0.5rem;
+    border-radius: 0px;
+  }
+  main {
+    padding-inline: 2rem;
+    height: 100vh;
+    overflow-y: auto;
+  }
+  nav div:nth-of-type(1) {
+    order: -3;
+  }
+  nav div {
+    min-height: 40px;
+    min-width: 150px;
+    padding: 1.5rem 1rem;
+  }
+  nav .header-shop-button {
+    min-height: 40px;
+    min-width: 150px;
+  }
+  .card {
+    min-width: 315px;
+    max-width: 20%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    background-color: #fef7e2;
+  }
+  .last-container {
+    min-width: 655px;
+  }
+  .text-container {
+    padding: 2rem;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+  .inner-text {
+    max-width: 50%;
+  }
+  .text-container div:nth-of-type(2) {
+    order: -1;
+    min-width: 290px;
+    width: 50%;
   }
 }
