--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
@@ -188,7 +188,7 @@ span {
 
 @media screen and (min-width: 766px) {
   body {
-    overflow: auto;
+    overflow: hidden;
     display: flex;
   }
   nav {
