--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
@@ -154,6 +154,7 @@ span {
     font-size: 2rem;
     padding: 1.5rem 1rem;
     min-width: unset;
+    margin: 0;
   }
   main {
     flex-direction: row;
