--- a/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_4_css_avanzato/l15_22_11_2023/esercizi/assets/css/style.css
@@ -206,6 +206,7 @@ span {
     padding-inline: 2rem;
     height: 100vh;
     overflow-y: auto;
+    overflow-x: hidden;
   }
   nav div:nth-of-type(1) {
     order: -3;
