--- a/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start2/frase.css
+++ b/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start2/frase.css
@@ -8,3 +8,64 @@
 7 ritardare progressivamente l'animazione delle altre 2 parole 
 */
 
+body {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  padding: 2rem;
+}
+div#testoAlternato {
+  width: 1000px;
+  border: 2px solid black;
+}
+p {
+  padding: 2rem;
+  line-height: 30px;
+}
+
+span {
+  padding: 2rem;
+  color: darkred;
+}
+i {
+  position: absolute;
+  opacity: 0;
+}
+.parole i:nth-child(1) {
+  animation: slideShow 4s linear infinite;
+}
+.parole i:nth-child(2) {
+  animation: slideShow 4s linear infinite;
+  animation-delay: 1.33s;
+}
+.parole i:nth-child(3) {
+  animation: slideShow 4s linear infinite;
+  animation-delay: 2.65s;
+}
+@keyframes slideShow {
+  0% {
+    font-size: 5px;
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  25% {
+    font-size: 10px;
+    opacity: 0.5;
+    transform: translateY(-20px);
+  }
+  50% {
+    font-size: 20px;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  75% {
+    font-size: 10px;
+    opacity: 0.5;
+    transform: translateY(20px);
+  }
+  100% {
+    font-size: 5px;
+    opacity: 0;
+    transform: translateY(40px);
+  }
+}
