--- a/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start1/postit.css
+++ b/corso/settimana_4_css_avanzato/l16_23_11_2023/esercizi/start1/postit.css
@@ -36,11 +36,11 @@ main div p {
 .task6:hover,
 .task7:hover,
 .task8:hover {
-  transform: rotate(0deg) scale(1.5);
+  rotate: z 0deg;
+  scale: 1.5;
 }
 .task1 {
-  animation: slamEffect1 1s 0.1s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
-  transform: rotate(-8deg);
+  rotate: z -8deg;
   background: rgb(246, 246, 196);
   background: linear-gradient(
     180deg,
@@ -48,10 +48,11 @@ main div p {
     rgba(213, 213, 166, 1) 69%,
     rgba(135, 135, 106, 1) 100%
   );
+  animation: slamEffect 1s 0.1s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 
 .task2 {
-  transform: rotate(8deg);
+  rotate: z 8deg;
   background: rgb(200, 248, 201);
   background: linear-gradient(
     180deg,
@@ -59,10 +60,10 @@ main div p {
     rgba(169, 215, 170, 1) 69%,
     rgba(108, 138, 109, 1) 100%
   );
-  animation: slamEffect2 1s 0.2s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.2s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task3 {
-  transform: rotate(-10deg);
+  rotate: z -10deg;
   background: rgb(200, 198, 246);
   background: linear-gradient(
     180deg,
@@ -70,10 +71,10 @@ main div p {
     rgba(173, 171, 216, 1) 69%,
     rgba(110, 108, 138, 1) 100%
   );
-  animation: slamEffect3 1s 0.3s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.3s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task4 {
-  transform: rotate(10deg);
+  rotate: z 10deg;
   background: rgb(200, 248, 201);
   background: linear-gradient(
     180deg,
@@ -81,10 +82,10 @@ main div p {
     rgba(169, 215, 170, 1) 69%,
     rgba(108, 138, 109, 1) 100%
   );
-  animation: slamEffect4 1s 0.4s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.4s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task5 {
-  transform: rotate(-15deg);
+  rotate: z -15deg;
   background: rgb(246, 246, 196);
   background: linear-gradient(
     180deg,
@@ -92,10 +93,10 @@ main div p {
     rgba(213, 213, 166, 1) 69%,
     rgba(135, 135, 106, 1) 100%
   );
-  animation: slamEffect5 1s 0.5s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.5s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task6 {
-  transform: rotate(-15deg);
+  rotate: z -15deg;
   background: rgb(200, 198, 246);
   background: linear-gradient(
     180deg,
@@ -103,10 +104,10 @@ main div p {
     rgba(173, 171, 216, 1) 69%,
     rgba(110, 108, 138, 1) 100%
   );
-  animation: slamEffect6 1s 0.6s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.6s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task7 {
-  transform: rotate(20deg);
+  rotate: z 20deg;
   background: rgb(246, 246, 196);
   background: linear-gradient(
     180deg,
@@ -114,10 +115,10 @@ main div p {
     rgba(213, 213, 166, 1) 69%,
     rgba(135, 135, 106, 1) 100%
   );
-  animation: slamEffect7 1s 0.7s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.7s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
 .task8 {
-  transform: rotate(-5deg);
+  rotate: z -5deg;
   background: rgb(200, 248, 201);
   background: linear-gradient(
     180deg,
@@ -125,93 +126,17 @@ main div p {
     rgba(169, 215, 170, 1) 69%,
     rgba(108, 138, 109, 1) 100%
   );
-  animation: slamEffect8 1s 0.8s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
+  animation: slamEffect 1s 0.8s cubic-bezier(1, -0.07, 0.28, 1.26) backwards;
 }
-@keyframes slamEffect1 {
+@keyframes slamEffect {
   0% {
     opacity: 0;
-    transform: scale(2) rotate(-280deg);
+    rotate: z -280deg;
+    scale: 2;
   }
 
   100% {
     opacity: 1;
-    transform: scale(1) rotate(-8deg);
-  }
-}
-@keyframes slamEffect2 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(300deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(8deg);
-  }
-}
-@keyframes slamEffect3 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(-320deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(-10deg);
-  }
-}
-@keyframes slamEffect4 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(290deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(-10deg);
-  }
-}
-@keyframes slamEffect5 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(-180deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(-15deg);
-  }
-}
-@keyframes slamEffect6 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(360deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(-15deg);
-  }
-}
-@keyframes slamEffect7 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(220deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(20deg);
-  }
-}
-@keyframes slamEffect8 {
-  0% {
-    opacity: 0;
-    transform: scale(2) rotate(-500deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1) rotate(-5deg);
+    scale: 1;
   }
 }
