--- a/corso/settimana_5_bootstrap/l18_29_11_2023/lezioni/assets/css/style.css
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/lezioni/assets/css/style.css
@@ -1,7 +1,268 @@
+@charset "UTF-8";
 body {
+  margin: 0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  font-style: normal;
 }
-body main h1 {
-  font-size: 8rem;
-  color: red;
+
+main {
+  padding-inline: 3rem;
+}
+main section h1 {
+  color: rgb(230, 0, 255);
+  transition: background-color 0.3s;
+}
+main section h1:hover {
+  background-color: lightgreen;
+}
+main section div ul li {
+  color: blue;
+}
+main section div ul li::marker {
+  content: "🤩🥶";
+}
+
+.btn, .btn-alt {
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.25rem 0.5rem;
+  border-radius: 6px;
+  color: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+}
+.btn-primary {
+  background-color: #f380ff;
+  border-color: rgb(230, 0, 255);
+  color: #5c0066;
+}
+.btn-success {
+  background-color: #82ff80;
+  border-color: rgb(4, 255, 0);
+  color: #026600;
+}
+.btn-warning {
+  background-color: #fff080;
+  border-color: rgb(255, 225, 0);
+  color: #665a00;
+}
+.btn-danger {
+  background-color: #ff8f80;
+  border-color: rgb(255, 30, 0);
+  color: #660c00;
+}
+@media screen and (min-width: 768px) {
+  .btn, .btn-alt {
+    padding: 0.5rem 1.5rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .btn, .btn-alt {
+    padding: 1rem 3rem;
+  }
+}
+
+.btn-alt {
+  padding: 1rem;
+  border-width: 2px;
+  border-radius: 10px;
+  background-color: palegoldenrod;
+  border-color: rgb(168, 154, 0);
+  color: rgb(33, 31, 1);
+}
+
+.btn-basic {
+  border: none;
+  background-color: transparent;
+  color: inherit;
+}
+
+.btn-basic {
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+}
+
+.box-1 {
+  width: 200px;
+  height: 200px;
+  margin-block: 2rem;
+  display: inline-block;
+  vertical-align: bottom;
+  border-radius: 10px;
+  border: 2px solid darkcyan;
+  color: paleturquoise;
+  background-color: darkblue;
+  box-shadow: 0 3px 30px #000061;
+}
+
+.box-2 {
+  width: 200px;
+  height: 200px;
+  margin-block: 2rem;
+  display: inline-block;
+  vertical-align: bottom;
+  border-radius: 30px;
+  border: 2px solid coral;
+  color: palegoldenrod;
+  background-color: crimson;
+  box-shadow: 0 3px 30px #9a142f;
+}
+
+.box-3 {
+  width: 200px;
+  height: 200px;
+  margin-block: 2rem;
+  display: inline-block;
+  vertical-align: bottom;
+  border-radius: 10px;
+  border: 2px solid gray;
+  color: black;
+  background-color: lightgray;
+  box-shadow: 0 3px 30px darkgray;
+}
+
+.box-4 {
+  width: 200px;
+  height: 200px;
+  margin-block: 2rem;
+  display: inline-block;
+  vertical-align: bottom;
+  border-radius: 60px;
+  border: 2px solid rgb(148, 140, 240);
+  color: black;
+  background-color: lightgray;
+  box-shadow: 0 3px 30px darkgray;
+}
+
+.box-5 {
+  width: 300px;
+  height: 300px;
+  margin-block: 2rem;
+  vertical-align: bottom;
+  border: 2px solid lightcoral;
+  color: black;
+  background-image: url("https://plus.unsplash.com/premium_photo-1700838996452-9e83d1f2c514?q=80&w=2072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  display: inline-block;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.box-6 {
+  width: 300px;
+  height: 300px;
+  margin-block: 2rem;
+  vertical-align: bottom;
+  border: 2px solid lightcoral;
+  color: black;
+  background-color: darkcyan;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-padding-1 {
+  padding: 10px;
+}
+
+.custom-padding-2 {
+  padding: 20px;
+}
+
+.custom-padding-3 {
+  padding: 30px;
+}
+
+.custom-padding-4 {
+  padding: 40px;
+}
+
+.custom-padding-5 {
+  padding: 50px;
+}
+
+.square-red {
+  background-color: red;
+}
+
+.square-green {
+  background-color: green;
+}
+
+.square-blue {
+  background-color: blue;
+}
+
+.square-yellow {
+  background-color: yellow;
+}
+
+.square-purple {
+  background-color: purple;
+}
+
+.square-orange {
+  background-color: orange;
+}
+
+.padding-xs {
+  padding: 10px;
+}
+.padding-xs-inline {
+  padding-inline: 10px;
+}
+.padding-xs-block {
+  padding-block: 10px;
+}
+
+.padding-sm {
+  padding: 20px;
+}
+.padding-sm-inline {
+  padding-inline: 20px;
+}
+.padding-sm-block {
+  padding-block: 20px;
+}
+
+.padding-md {
+  padding: 30px;
+}
+.padding-md-inline {
+  padding-inline: 30px;
+}
+.padding-md-block {
+  padding-block: 30px;
+}
+
+.padding-lg {
+  padding: 60px;
+}
+.padding-lg-inline {
+  padding-inline: 60px;
+}
+.padding-lg-block {
+  padding-block: 60px;
+}
+
+.padding-xl {
+  padding: 120px;
+}
+.padding-xl-inline {
+  padding-inline: 120px;
+}
+.padding-xl-block {
+  padding-block: 120px;
+}
+
+.padding-xxl {
+  padding: 200px;
+}
+.padding-xxl-inline {
+  padding-inline: 200px;
+}
+.padding-xxl-block {
+  padding-block: 200px;
 }/*# sourceMappingURL=style.css.map */
