--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_button.scss
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_button.scss
@@ -9,5 +9,9 @@
   .button-#{$color} {
     @extend .btn;
     background-color: $value;
+
+    &:hover {
+      background-color: scale-color($value, $lightness: 25%);
+    }
   }
 }
