--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
@@ -398,13 +398,22 @@ body {
 .button-blue {
   background-color: #0e6cff;
 }
+.button-blue:hover {
+  background-color: #4a91ff;
+}
 
 .button-orange {
   background-color: #ff8700;
 }
+.button-orange:hover {
+  background-color: #ffa540;
+}
 
 .button-green {
   background-color: #4caf50;
+}
+.button-green:hover {
+  background-color: #78c47b;
 }
 
 .flex {
@@ -423,6 +432,8 @@ body header nav {
   background-color: lightslategray;
   display: flex;
   align-items: center;
+  border-radius: 20px;
+  margin-bottom: 1rem;
 }
 body header nav .logo {
   padding-inline-end: 1rem;
@@ -443,6 +454,8 @@ body main .hero {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 50px;
+  margin-bottom: 1rem;
 }
 body main .hero .container-text-hero {
   width: 50%;
@@ -456,6 +469,9 @@ body main .hero .container-img-hero img {
   border-radius: 50px;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 20px;
+  border: 2px solid black;
+  box-shadow: 3px 3px 10px black;
 }
 body main section {
   display: flex;
@@ -466,4 +482,7 @@ body main section .container-img {
 }
 body main section .container-img img {
   max-width: 100%;
+  border-radius: 20px;
+  border: 2px solid black;
+  box-shadow: 3px 3px 10px black;
 }/*# sourceMappingURL=style.css.map */
