--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
@@ -483,6 +483,6 @@ body main section .container-img {
 body main section .container-img img {
   max-width: 100%;
   border-radius: 20px;
-  border: 2px solid black;
-  box-shadow: 3px 3px 10px black;
+  border: 2px solid white;
+  box-shadow: 3px 3px 10px white;
 }/*# sourceMappingURL=style.css.map */
