--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/style.scss
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/style.scss
@@ -50,7 +50,7 @@ body {
       margin-bottom: 1rem;
 
       .container-text-hero {
-        @include fadeIn(1s, 0s);
+        @include fadeIn(fadeInText, 1s, 0.5s);
         width: 50%;
         p {
           line-height: 30px;
@@ -58,7 +58,7 @@ body {
         }
       }
       .container-img-hero {
-        @include fadeIn(1s, 0.5s);
+        @include fadeIn(fadeInImg, 1s, 1s);
         img {
           width: 100%;
           border-radius: 50px;
