--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/assets/css/style.css
@@ -546,8 +546,6 @@ body main .hero .container-img-hero img {
   box-shadow: 3px 3px 10px white;
 }
 body main section {
-  /*display: flex;
-  gap: 10px;*/
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -555,16 +553,14 @@ body main section {
 }
 body main section > * {
   padding: 0.5rem;
-  width: 30.3333333333%;
+  width: 21%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-body main section .container-img {
-  /* width: 25%;*/
-}
 body main section .container-img img {
-  max-width: 100%;
+  width: 100%;
+  max-width: 500px;
   border-radius: 20px;
   border: none;
   box-shadow: 3px 3px 10px black;
