--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_animation.scss
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_animation.scss
@@ -1,15 +1,15 @@
 @mixin fadeIn($nome, $seconds, $delay) {
   @keyframes #{$nome} {
     0% {
-      /* translate: 0px 50px;*/
+      translate: 0px -100px;
       opacity: 0;
-      transform: translateY(-100px);
+      /*  transform: translateY(-100px);*/
     }
 
     100% {
-      /*translate: 0px 0px;*/
+      translate: 0px 0px;
       opacity: 1;
-      transform: translateY(0px);
+      /* transform: translateY(0px);*/
     }
   }
   animation: $nome $seconds $delay backwards;
