--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_mixins.scss
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/partials/_mixins.scss
@@ -10,8 +10,10 @@
   align-items: center;
 
   > * {
-    padding: 0.5rem;
-    width: calc(100% / $nItem)-$nItem;
+    padding-inline: 0.25rem;
+    padding-block: 0.5rem;
+    $cento: 100%-$nItem;
+    width: calc($cento / $nItem)-0.5;
     display: flex;
     justify-content: center;
     align-items: center;
