--- a/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/style.scss
+++ b/corso/settimana_5_bootstrap/l18_29_11_2023/esercizi/sass/style.scss
@@ -73,6 +73,7 @@ body {
         img {
           width: 100%;
           max-width: 500px;
+          font-size: 0px;
           @include floating(none, black);
         }
       }
