--- a/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/style.scss
+++ b/corso/settimana_5_bootstrap/l19_30_11_2023/lezioni/style.scss
@@ -1,1 +1,7 @@
-@import "./partials/bootstrap-overrides";
+@import "bootstrap-overrides";
+
+// website specific CSS goes here
+
+.custom-stefanos-class {
+  color: white;
+}
